--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <a href="cadastrocardapio.html">Cadastrar Açaís</a>
         <a href="cadastrosorvete.html">Cadastrar Sorvetes</a>
         <a href="cadastraroutros.html">Cadastrar Outros</a>
-        <a href="">Produtos cadastrados
+        <a href="index.html">Produtos cadastrados
         
         </a>
     </div>
