--- a/cadastrosorvete.html
+++ b/cadastrosorvete.html
@@ -126,7 +126,7 @@
         <a href="cadastroacai.html">Cadastrar Açaís</a>
         <a href="cadastrosorvete.html">Cadastrar Sorvetes</a>
         <a href="cadastraroutros.html">Cadastrar Outros</a>
-        <a href="cadastraroutros.html">Produtos cadastrados</a>
+        <a href="index.html">Produtos cadastrados</a>
     </div>
 
     <h1>Cadastro de Sorvetes - Acaiteria</h1>
