--- a/comandas.html
+++ b/comandas.html
@@ -621,8 +621,8 @@ function printComandaHtml(html) {
   printDiv.style.display = 'block';
   setTimeout(() => {
     window.print();
-    setTimeout(() => { printDiv.style.display = 'none'; }, 500);
-  }, 100); // Pequeno delay para garantir renderização
+    setTimeout(() => { printDiv.style.display = 'none'; }, 1000);
+  }, 500); // Delay maior para garantir renderização
 }
 
 function checkForNewCards() {
@@ -630,10 +630,9 @@ function checkForNewCards() {
   const ids = cards.map(card => card.getAttribute('data-id'));
   const newIds = ids.filter(id => !lastIds.includes(id));
   if (newIds.length > 0) {
-    newIds.forEach(id => {
-      const card = cards.find(c => c.getAttribute('data-id') === id);
-      if (card) printComandaHtml(card.innerHTML);
-    });
+    // Imprime apenas o primeiro novo card encontrado
+    const card = cards.find(c => c.getAttribute('data-id') === newIds[0]);
+    if (card) printComandaHtml(card.innerHTML);
   }
   lastIds = ids;
 }
