--- a/comandas.html
+++ b/comandas.html
@@ -639,6 +639,11 @@ function checkForNewCards() {
 
 setInterval(checkForNewCards, 5000);
 checkForNewCards();
-</script>
+  </script>
+  <script>
+  setInterval(() => {
+    location.reload();
+  }, 5000);
+  </script>
 </body>
 </html>
